[package]
name = "microbit-button-press-indicator"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "defmt",
  "executor-thread",
] }
embassy-nrf = { version = "0.3.1", features = [
  "nrf52833",
  "gpiote",
  "time",
  "time-driver-rtc1",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt-timestamp-uptime",
  "defmt",
] }
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
microbit-v2 = "0.15.1"
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
